--- a/package.json
+++ b/package.json
@@ -1,20 +1,40 @@
 {
-  "name": "booklee",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "node_modules/next/dist/bin/next start -p $PORT"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@sendgrid/mail": "^7.6.0",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.3.4",
+    "dotenv": "^10.0.0",
+    "framer-motion": "^4.1.17",
+    "geolib": "^3.3.3",
+    "mongodb": "^3.5.9",
+    "mongoose": "^6.1.1",
+    "next": "latest",
+    "next-auth": "^4.0.5",
+    "process": "^0.11.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.18",
+    "react-top-loading-bar": "^2.1.0",
+    "swr": "^1.1.1",
+    "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "autoprefixer": "^10.2.6",
+    "json-loader": "^0.5.7",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
+    "transform-loader": "^0.2.4",
+    "webworkify-webpack": "^1.0.6"
   }
 }
